--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@google/genai": "0.3.1",
+    "@react-three/drei": "9.99.0",
+    "@react-three/fiber": "8.15.16",
+    "lucide-react": "0.344.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.22.3",
-    "lucide-react": "0.344.0",
-    "@google/genai": "0.3.1",
-    "three": "0.160.0",
-    "@react-three/fiber": "8.15.16",
-    "@react-three/drei": "9.99.0"
+    "three": "0.160.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.3.0",
+    "@vitejs/plugin-react": "^5.1.4",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1"
   }
 }
