Upgrade Ask-AI flow with Gemini mic + ElevenLabs voice and enhanced UI

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-GEMINI_API_KEY=AIzaSyCndFesplBByK7zUeAsbeFWgi_8AVhDZiE
+GEMINI_API_KEY=
+ELEVENLABS_API_KEY=
+ELEVENLABS_BASE_URL=https://api.elevenlabs.io
+ELEVENLABS_VOICE_ID=bspiLwZDEcpIbBf6zWeq
+ELEVENLABS_MODEL_ID=eleven_flash_v2_5
+ELEVENLABS_OUTPUT_FORMAT=mp3_44100_128
